force-app/main/default/objects/Events__c/fields/Campaigns_Created_Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaigns_Created_Event_Start_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >This is a hidden field that indicates that the system has already created the Event Start Date dependent marketing campaigns for this event. It is used to prevent the system from automatically creating these campaigns again a second time. Ticket #34107 / Used in Process Builder &quot;Event - Create Campaigns (Event Start Date)&quot;</description>
    <inlineHelpText
  >This is a hidden field that indicates that the system has already created the Event Start Date dependent marketing campaigns for this event. It is used to prevent the system from automatically creating these campaigns again a second time.</inlineHelpText>
    <label>Campaigns Created - Event Start Date</label>
    <type>Checkbox</type>
</CustomField>