force-app/main/default/objects/Events__c/fields/Cancel_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_by_Date__c</fullName>
    <label>Cancel by Date</label>
    <type>Date</type>
</CustomField>