force-app/main/default/objects/Events__c/fields/CDG_Closing_Speaker__c.field-meta.xml
<CustomField>
    <fullName>CDG_Closing_Speaker__c</fullName>
    <inlineHelpText
  >The Senior Fellow or staff member assigned to deliver your closing CDG session. Please note: Senior Fellows/Staff at DGSs can be assigned up to TWO sessions (one AM breakout session plus the closing session - no PM breakout). For Cyber event closing speakers, Senior Fellows can only be assigned to your closing session (no breakouts).</inlineHelpText>
    <label>CDG Closing Speaker</label>
    <length>150</length>
    <type>Text</type>
</CustomField>