force-app/main/default/objects/Events__c/fields/Cert__c.field-meta.xml
<CustomField>
    <fullName>Cert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cert</label>
    <type>Checkbox</type>
</CustomField>