force-app/main/default/objects/Events__c/fields/Cert_Job_Order_Due__c.field-meta.xml
<CustomField>
    <fullName>Cert_Job_Order_Due__c</fullName>
    <label>Certs Job Order Due</label>
    <type>Date</type>
</CustomField>