force-app/main/default/objects/Events__c/fields/Certs_Awards_Names_Deadline_12PM__c.field-meta.xml
<CustomField>
    <fullName>Certs_Awards_Names_Deadline_12PM__c</fullName>
    <label>Certs &amp; Awards Names Deadline EOD</label>
    <type>Date</type>
</CustomField>