force-app/main/default/objects/Events__c/fields/Closed_Message__c.field-meta.xml
<CustomField>
    <fullName>Closed_Message__c</fullName>
    <label>Closed Message</label>
    <type>TextArea</type>
</CustomField>