force-app/main/default/objects/Events__c/fields/Concurrent_Session_Rooms_Available__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_Session_Rooms_Available__c</fullName>
    <label>Concurrent Session Rooms Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>