force-app/main/default/objects/Events__c/fields/Conf_Bag_Sponsor_Deadline_12PM_2__c.field-meta.xml
<CustomField>
    <fullName>Conf_Bag_Sponsor_Deadline_12PM_2__c</fullName>
    <description
  >Deadline to sponsor the conference bags for this event.</description>
    <inlineHelpText
  >Deadline to sponsor the conference bags for this event.</inlineHelpText>
    <label>Conf Bag Sponsor Deadline EOD</label>
    <type>Date</type>
</CustomField>