force-app/main/default/objects/Events__c/fields/Contact_Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Direct_Phone__c</fullName>
    <description
  >This is the direct phone number of the main contact involved in servicing e.Republic at the event venue.</description>
    <inlineHelpText
  >This is the direct phone number of the main contact involved in servicing e.Republic at the event venue.</inlineHelpText>
    <label>Contact Direct Phone</label>
    <type>Phone</type>
</CustomField>