force-app/main/default/objects/Events__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description
  >This is the email address of the main contact involved in servicing e.Republic at the event venue.</description>
    <inlineHelpText
  >This is the email address of the main contact involved in servicing e.Republic at the event venue.</inlineHelpText>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>