force-app/main/default/objects/Events__c/fields/Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Contact_Fax__c</fullName>
    <description
  >This is the fax number of the main contact involved in servicing e.Republic at the event venue.</description>
    <inlineHelpText
  >This is the fax number of the main contact involved in servicing e.Republic at the event venue.</inlineHelpText>
    <label>Contact Fax</label>
    <type>Phone</type>
</CustomField>