force-app/main/default/objects/Events__c/fields/Contact_Interest_Topics__c.field-meta.xml
<CustomField>
    <fullName>Contact_Interest_Topics__c</fullName>
    <inlineHelpText
  >If this event covers any of the specific topics listed, select those topics here to make it show up under any registering contact&apos;s &quot;Topics Interested In&quot; field. (A way to capture that they&apos;ve expressed interest in a particular topic.)</inlineHelpText>
    <label>Contact Interest Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Interest_Topics</valueSetName>
    </valueSet>
</CustomField>