force-app/main/default/objects/Events__c/fields/Count_of_On24_Survey1answer_numeric__c.field-meta.xml
<CustomField>
    <fullName>Count_of_On24_Survey1answer_numeric__c</fullName>
    <description
  >Counts the number of people that responded to survey question 1. Used for calculating the webinar rating.</description>
    <inlineHelpText
  >Counts the number of people that responded to survey question 1. Used for calculating the webinar rating.</inlineHelpText>
    <label>On24 Survey1 Count</label>
    <summaryFilterItems>
        <field>Registration__c.On24_Survey1answer_numeric__c</field>
        <operation>notEqual</operation>
        <value />
    </summaryFilterItems>
    <summaryForeignKey>Registration__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>