force-app/main/default/objects/Events__c/fields/COVID_19_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_Guidelines__c</fullName>
    <label>COVID-19 Guidelines</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>