force-app/main/default/objects/Events__c/fields/Covid_Note__c.field-meta.xml
<CustomField>
    <fullName>Covid_Note__c</fullName>
    <description
  >Temporary note field used to track event changes due to COVID-19</description>
    <inlineHelpText
  >Temporary note field used to track event changes due to COVID-19</inlineHelpText>
    <label>Covid Note</label>
    <type>TextArea</type>
</CustomField>