force-app/main/default/objects/Events__c/fields/Covid_Status__c.field-meta.xml
<CustomField>
    <fullName>Covid_Status__c</fullName>
    <description
  >Temporary pick-list used to track event changes due to COVID-19</description>
    <inlineHelpText
  >Temporary pick-list used to track event changes due to COVID-19</inlineHelpText>
    <label>Covid Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Start Cancelled</fullName>
            </value>
            <value>
                <fullName>Moved to Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>