force-app/main/default/objects/Events__c/fields/Credit_Card_Only__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Card Only</label>
    <type>Checkbox</type>
</CustomField>