force-app/main/default/objects/Events__c/fields/Custom_1__c.field-meta.xml
<CustomField>
    <fullName>Custom_1__c</fullName>
    <label>Custom_1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>