force-app/main/default/objects/Events__c/fields/Custom_2__c.field-meta.xml
<CustomField>
    <fullName>Custom_2__c</fullName>
    <label>Custom 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>