force-app/main/default/objects/Events__c/fields/Custom_2_Title__c.field-meta.xml
<CustomField>
    <fullName>Custom_2_Title__c</fullName>
    <label>Custom 2 Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>