force-app/main/default/objects/Events__c/fields/Custom_3__c.field-meta.xml
<CustomField>
    <fullName>Custom_3__c</fullName>
    <label>Custom 3</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>