force-app/main/default/objects/Events__c/fields/Custom_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Custom_Disclaimer__c</fullName>
    <label>Custom Disclaimer</label>
    <type>TextArea</type>
</CustomField>