force-app/main/default/objects/Events__c/fields/Custom_Event_Info__c.field-meta.xml
<CustomField>
    <fullName>Custom_Event_Info__c</fullName>
    <description>Custom Event Info for each event</description>
    <inlineHelpText>Custom Event Info for each event</inlineHelpText>
    <label>Custom Event Info</label>
    <type>TextArea</type>
</CustomField>