force-app/main/default/objects/Events__c/fields/Custom_Event_REG_Use__c.field-meta.xml
<CustomField>
    <fullName>Custom_Event_REG_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Event: REG Use</label>
    <type>Checkbox</type>
</CustomField>