force-app/main/default/objects/Events__c/fields/Custom_Event_Sponsor_Signs_Deadline_EOD__c.field-meta.xml
<CustomField>
    <fullName>Custom_Event_Sponsor_Signs_Deadline_EOD__c</fullName>
    <label>Custom Event Sponsor Signs Deadline EOD</label>
    <type>Date</type>
</CustomField>