force-app/main/default/objects/Events__c/fields/Custom_Events_Quarterly_Goal__c.field-meta.xml
<CustomField>
    <fullName>Custom_Events_Quarterly_Goal__c</fullName>
    <description
  >This is the quarterly goal for all event in the Custom Events division.</description>
    <inlineHelpText
  >This is the quarterly goal for all event in the Custom Events division.</inlineHelpText>
    <label>Custom Events Quarterly Goal</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>