force-app/main/default/objects/Events__c/fields/Custom_Media__c.field-meta.xml
<CustomField>
    <fullName>Custom_Media__c</fullName>
    <description
  >Used to indicate if an event requires custom media for its execution.</description>
    <inlineHelpText
  >Used to indicate if an event requires custom media for its execution.</inlineHelpText>
    <label>Custom Media</label>
    <length>80</length>
    <type>Text</type>
</CustomField>