force-app/main/default/objects/Events__c/fields/Datasheet_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Datasheet_Nickname__c</fullName>
    <formula>RIGHT( Name , LEN(Name)-FIND(&quot; - &quot;, Name)-2)</formula>
    <label>Datasheet Nickname</label>
    <type>Text</type>
</CustomField>