force-app/main/default/objects/Events__c/fields/Datasheet_Nickname_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Datasheet_Nickname_Last_Year__c</fullName>
    <formula
  >RIGHT( last_years_event__r.Name  , LEN(last_years_event__r.Name )-FIND(&quot; - &quot;, last_years_event__r.Name )-2)</formula>
    <label>Datasheet Nickname (Last Year)</label>
    <type>Text</type>
</CustomField>