force-app/main/default/objects/Events__c/fields/Date_and_Name__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Name__c</fullName>
    <description
  >Shows the Date and the Name in the same field for use in reporting.</description>
    <formula
  >LPAD(TEXT(MONTH(Event_Start_Date__c)), 2,&quot;0&quot;)&amp;&quot;-&quot;&amp;
LPAD(TEXT(DAY(Event_Start_Date__c)), 2,&quot;0&quot;)&amp;&quot; - &quot;&amp;
Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows the Date and the Name in the same field for use in reporting.</inlineHelpText>
    <label>Date and Name</label>
    <type>Text</type>
</CustomField>