force-app/main/default/objects/Events__c/fields/Date_and_Name_with_Link__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Name_with_Link__c</fullName>
    <description
  >shows the date and name of the event and links to the event record for use on reports that won&apos;t be exported only</description>
    <formula
  >LPAD(TEXT(MONTH(Event_Start_Date__c)), 2,&quot;0&quot;)&amp;&quot;-&quot;&amp; 
LPAD(TEXT(DAY(Event_Start_Date__c)), 2,&quot;0&quot;)&amp;&quot; - &quot;&amp; 
HYPERLINK(&quot;/&quot;&amp;Id,Name)</formula>
    <label>Date and Name (with Link)</label>
    <type>Text</type>
</CustomField>