force-app/main/default/objects/Events__c/fields/Days_Since_Last_Event__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Event__c</fullName>
    <description
  >Hidden field used for creating reports from buttons on the events object.</description>
    <formula
  >TEXT( Event_Start_Date__c - last_years_event__r.Event_Start_Date__c ) &amp; &quot; DAYS AGO&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Event</label>
    <type>Text</type>
</CustomField>