force-app/main/default/objects/Events__c/fields/Deliverables_Summary__c.field-meta.xml
<CustomField>
    <fullName>Deliverables_Summary__c</fullName>
    <label>Deliverables Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>