force-app/main/default/objects/Events__c/fields/Delivery_Contract__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Delivery Contract related to Event</description>
    <label>Delivery Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Events_and_Conferences</relationshipName>
    <type>Lookup</type>
</CustomField>