force-app/main/default/objects/Events__c/fields/Delivery_Value__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Value__c</fullName>
    <description
  >Used to track the delivery value of custom events over time.</description>
    <inlineHelpText
  >Used to track the delivery value of custom events over time.</inlineHelpText>
    <label>Delivery Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>