force-app/main/default/objects/Events__c/fields/Description_2__c.field-meta.xml
<CustomField>
    <fullName>Description_2__c</fullName>
    <description>for extra registration and contact info</description>
    <inlineHelpText>for extra registration and contact info</inlineHelpText>
    <label>Description 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>