force-app/main/default/objects/Events__c/fields/Disable_QR_For_Sponsors__c.field-meta.xml
<CustomField>
    <fullName>Disable_QR_For_Sponsors__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Blocks sponsors from logging into the QR Scanner Application saying &quot;The Badge Scanning feature is not available for this event&quot;</description>
    <inlineHelpText
  >Blocks sponsors from logging into the QR Scanner Application saying &quot;The Badge Scanning feature is not available for this event&quot;</inlineHelpText>
    <label>Disable QR For Sponsors</label>
    <type>Checkbox</type>
</CustomField>