force-app/main/default/objects/Events__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description
  >The dollar value of the discount given to client on a custom event.</description>
    <inlineHelpText
  >The dollar value of the discount given to client on a custom event.</inlineHelpText>
    <label>Discount</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>