force-app/main/default/objects/Events__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>This is used on the web page</description>
    <inlineHelpText>This is used on the web page</inlineHelpText>
    <label>Display Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>