force-app/main/default/objects/Events__c/fields/Display_Title__c.field-meta.xml
<CustomField>
    <fullName>Display_Title__c</fullName>
    <description
  >Display title for the event, for use in listing pages, and landing page headlines on the website.</description>
    <inlineHelpText
  >Display title for the event, for use in listing pages, and landing page headlines on the website.</inlineHelpText>
    <label>Display Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>