force-app/main/default/objects/Events__c/fields/Do_Not_Sync_to_CMS__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sync_to_CMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >If this is selected, this record will not sync to the e.Republic CMS system when this record is saved.</description>
    <inlineHelpText
  >If this is selected, this record will not sync to the e.Republic CMS system when this record is saved.</inlineHelpText>
    <label>Do Not Sync to CMS</label>
    <type>Checkbox</type>
</CustomField>