force-app/main/default/objects/Events__c/fields/Duration_minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_minutes__c</fullName>
    <description
  >The duration, in minutes, of the webinar. Must be set in OneForm.</description>
    <inlineHelpText
  >The duration, in minutes, of the webinar. Must be set in OneForm.</inlineHelpText>
    <label>Duration (minutes)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>210</fullName>
            </value>
            <value>
                <fullName>240</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>