force-app/main/default/objects/Events__c/fields/Earliest_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Date__c</fullName>
    <description
  >Please do not have your shipments arrive at the venue any earlier than this date. Any packages received before this date will be returned to sender.</description>
    <inlineHelpText
  >Please do not have your shipments arrive at the venue any earlier than this date. Any packages received before this date will be returned to sender.</inlineHelpText>
    <label>Earliest Date Shipments May Arrive</label>
    <type>Date</type>
</CustomField>