force-app/main/default/objects/Events__c/fields/Editorial_Roundtable__c.field-meta.xml
<CustomField>
    <fullName>Editorial_Roundtable__c</fullName>
    <description
  >Tracking for editorial roundtable(s) associated with this event.</description>
    <inlineHelpText
  >Tracking for editorial roundtable(s) associated with this event.</inlineHelpText>
    <label>Editorial Roundtable</label>
    <type>TextArea</type>
</CustomField>