force-app/main/default/objects/Events__c/fields/Email_Banner_URL__c.field-meta.xml
<CustomField>
    <fullName>Email_Banner_URL__c</fullName>
    <description>URL for the 600x128 Email Banner for this event.</description>
    <inlineHelpText
  >URL for the 600x128 Email Banner for this event.</inlineHelpText>
    <label>Email Banner URL</label>
    <type>Url</type>
</CustomField>