force-app/main/default/objects/Events__c/fields/Email_Confirmation_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Confirmation_Template__c</fullName>
    <defaultValue>&quot;00X30000001HAFd&quot;</defaultValue>
    <label>Email Confirmation Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>