force-app/main/default/objects/Events__c/fields/Estimated_Show_Rate__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Show_Rate__c</fullName>
    <label>Estimated Show Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>