force-app/main/default/objects/Events__c/fields/Event_Add_Ons__c.field-meta.xml
<CustomField>
    <fullName>Event_Add_Ons__c</fullName>
    <description
  >Event add-ons, e.g. Tabletop Content Kit &amp; Lead Gen Add-On, where applicable.</description>
    <inlineHelpText
  >Event add-ons, e.g. Tabletop Content Kit &amp; Lead Gen Add-On, where applicable.</inlineHelpText>
    <label>Event Add-Ons</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>