force-app/main/default/objects/Events__c/fields/Event_Admin_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Event_Admin_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText
  >This person supports the director and gathers information for the event travel coordination process for the onsite staff.</inlineHelpText>
    <label>Event Admin Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Events_and_Conferences5</relationshipName>
    <type>Lookup</type>
</CustomField>