force-app/main/default/objects/Events__c/fields/Event_Brand_Division__c.field-meta.xml
<CustomField>
    <fullName>Event_Brand_Division__c</fullName>
    <description
  >The brand being used on the event and the division that is responsible for it&apos;s production.</description>
    <inlineHelpText
  >The brand being used on the event and the division that is responsible for it&apos;s production.</inlineHelpText>
    <label>Event Brand/Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GT Mag</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>Exec Events</fullName>
            </value>
            <value>
                <fullName>CDG</fullName>
            </value>
            <value>
                <fullName>CDE/Converge</fullName>
            </value>
            <value>
                <fullName>GOVERNING</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>